# cloud-conductor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
src/conductor/: __init__.py  cli.py  config.py  deployer.py  gpu_pricing.py  monitor.py  notify.py  provisioner.py  runner.py  ssh.py  state.py  syncer.py  validator.py
tests/: conftest.py  test_cli.py  test_config.py  test_deployer.py  test_gpu_pricing.py  test_monitor.py  test_notify.py  test_provisioner.py  test_runner.py  test_ssh.py  test_state.py  test_syncer.py  test_validator.py
