[project]
name = "cloud-conductor"
version = "0.1.0"
description = "Lightweight CLI orchestrator for RunPod GPU workloads"
requires-python = ">=3.12"
dependencies = [
    "runpod",
]

[project.optional-dependencies]
notify = ["httpx"]

[project.scripts]
conductor = "conductor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conductor"]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]
