# Copyright (c) 2026 Steve Flinter. MIT License.
[project]
name = "cloud-conductor"
version = "0.3.0"
description = "Lightweight CLI orchestrator for RunPod GPU workloads"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "runpod",
]

[project.optional-dependencies]
notify = ["httpx"]

[project.scripts]
conductor = "conductor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conductor"]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "shtab",
]
